# menu_pdf

./: .gitignore  Cargo.toml  LICENSE-MIT  demo_menu.ini  package_linux.sh  package_x86.sh  readme.md  release.sh  todo.md
res/: wochenmenu.md  wochenmenu.typ  wochenmenu_notes.md  wochenmenu_tuesday.md
res-test/: readme.md
res-test/lines/: typst_lines_data.typ  watch.sh  watch_data.sh
res-test/raphael/: menu.ini  menu_max.ini  menu_mid.ini  watch.sh  wochenmenu.typ
res-test/two-column/: two-column.typ  watch.sh
res-test/two-column_same_level/: thumb.sh  two-columns_same_level.typ  watch.sh
src/: main.rs  week.rs
